--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "express": "^4.15.2",
+    "nodemon": "^1.11.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
@@ -14,6 +16,7 @@
     "redux-logger": "^2.10.0"
   },
   "scripts": {
+    "api": "nodemon api.js --exec babel-node --presets latest",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
