--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-cli": "^6.24.0",
+    "babel-preset-latest": "^6.24.0",
     "react-router-dom": "next",
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "assert": "^1.4.1",
     "express": "^4.15.2",
+    "mongodb": "^2.2.25",
     "nodemon": "^1.11.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
