refactor DB URL

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "assert": "^1.4.1",
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "mongodb": "^2.2.25",
     "nodemon": "^1.11.0",
