--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "assert": "^1.4.1",
     "body-parser": "^1.17.1",
+    "cors": "^2.8.1",
+    "es6-promise": "^4.1.0",
     "express": "^4.15.2",
+    "isomorphic-fetch": "^2.2.1",
     "mongodb": "^2.2.25",
     "nodemon": "^1.11.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
-    "redux-logger": "^2.10.0"
+    "redux-logger": "^2.10.0",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "api": "nodemon api.js --exec babel-node --presets latest",
